--- a/acepricot-sync-client/.classpath
+++ b/acepricot-sync-client/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/acepricot-sync"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/HttpClient"/>
 	<classpathentry kind="lib" path="D:/Programy/BB/external_libraries/acelib/gson-2.2.2.jar"/>
+	<classpathentry kind="lib" path="D:/Programy/BB/external_libraries/acepricot/h2-1.3.167.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
