--- a/acepricot-sync-client/.classpath
+++ b/acepricot-sync-client/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/acepricot-sync"/>
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/acepricot-sync"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/HttpClient"/>
 	<classpathentry kind="lib" path="D:/Programy/BB/external_libraries/acelib/gson-2.2.2.jar"/>
 	<classpathentry kind="lib" path="D:/Programy/BB/external_libraries/acepricot/h2-1.3.167.jar"/>
