--- a/HttpClient/src/org/pabk/net/http/http-client.properties
+++ b/HttpClient/src/org/pabk/net/http/http-client.properties
@@ -11,7 +11,7 @@
 	<entry key="org.pabk.net.http.defaultFile">/</entry>
 	<entry key="org.pabk.util.haTable">C:\Program Files\PrepApp\conf\table.txt</entry>
 	<entry key="org.pabk.net.http.auth.user">9fFsCEH0AA==</entry>
-	<entry key="org.pabk.net.http.auth.password">8zu1w0iiHLn0AA==</entry>
+	<entry key="org.pabk.net.http.auth.password">8zu1w0iiEx30AA==</entry>
 	<entry key="krb5.proxy.serviceName">HTTP/proxy.pabk.sk@PABK.SK</entry>
 	<entry key="javax.net.ssl.trustStore">C:\Program Files\PrepApp\certs\cacerts</entry>
 	<entry key="javax.net.ssl.trustStorePassword">C+R8vaj4w3vvM6Xxcuzn7x9A</entry>
