--- a/acepricot-sync-client/.classpath
+++ b/acepricot-sync-client/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/HttpClient"/>
 	<classpathentry kind="lib" path="D:/Programy/BB/external_libraries/acelib/gson-2.2.2.jar"/>
 	<classpathentry kind="lib" path="D:/Programy/BB/external_libraries/acepricot/h2-1.3.167.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v7.0"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
