--- a/acepricot-sync/WebContent/WEB-INF/web.xml
+++ b/acepricot-sync/WebContent/WEB-INF/web.xml
@@ -14,6 +14,7 @@
     <display-name>AceJSONInOutRcvr</display-name>
     <servlet-name>AceJSONInOutRcvr</servlet-name>
     <servlet-class>com.acepricot.finance.sync.AceJSONInOutRcvr</servlet-class>
+    <load-on-startup>1</load-on-startup>
   </servlet>
   <servlet-mapping>
     <servlet-name>AceJSONInOutRcvr</servlet-name>
