--- a/acepricot-sync-client/.classpath
+++ b/acepricot-sync-client/.classpath
@@ -7,5 +7,8 @@
 	<classpathentry kind="lib" path="D:/Programy/BB/external_libraries/acelib/gson-2.2.2.jar"/>
 	<classpathentry kind="lib" path="D:/Programy/BB/external_libraries/acepricot/h2-1.3.167.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v7.0"/>
+	<classpathentry kind="lib" path="D:/Programy/BB/external_libraries/acelib/logback-access-1.1.2.jar"/>
+	<classpathentry kind="lib" path="D:/Programy/BB/external_libraries/acelib/logback-core-1.1.2.jar"/>
+	<classpathentry kind="lib" path="D:/Programy/BB/external_libraries/acelib/slf4j-api-1.6.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
