--- a/HttpClient/src/org/pabk/net/http/http-client.properties
+++ b/HttpClient/src/org/pabk/net/http/http-client.properties
@@ -1,28 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE properties SYSTEM "http://java.sun.com/dtd/properties.dtd">
 <properties>
-	<entry key="http.proxyHost">proxy.pabk.sk</entry>
-	<entry key="http.proxyPort">3128</entry>
-	<entry key="java.security.krb5.conf">C:\Program Files\PrepApp\conf\krb5.conf</entry>
-	<entry key="java.security.auth.login.config">C:\Program Files\PrepApp\conf\login.conf</entry>
-	<entry key="javax.security.auth.useSubjectCredsOnly">false</entry>
-	<entry key="org.pabk.net.http.defaultProtocol">HTTP</entry>
-	<entry key="org.pabk.net.http.defaultPort">80</entry>
-	<entry key="org.pabk.net.http.defaultFile">/</entry>
-	<entry key="org.pabk.util.haTable">C:\Program Files\PrepApp\conf\table.txt</entry>
-	<entry key="org.pabk.net.http.auth.user">9fFsCEH0AA==</entry>
-	<entry key="org.pabk.net.http.auth.password">8zu1w0iiHK30AA==</entry>
-	<entry key="krb5.proxy.serviceName">HTTP/proxy.pabk.sk@PABK.SK</entry>
-	<entry key="javax.net.ssl.trustStore">C:\Program Files\PrepApp\certs\cacerts</entry>
-	<entry key="javax.net.ssl.trustStorePassword">C+R8vaj4w3vvM6Xxcuzn7x9A</entry>
-	<entry key="org.fds.XMLCheck">true</entry>
-	<entry key="org.fds.AuthSchemaLocation">http://p3600x006:8080/PrepApp/fds_conf/fds_soap.xsd</entry>
-	<entry key="org.fds.DobiSchemaLocation">http://p3600x006:8080/PrepApp/fds_conf/fds_soap_dobi.xsd</entry>
-	<entry key="org.os.notification.endpoint">http://hubert.os.sk/fds_notification.asmx</entry>
-	<entry key="org.os.notification.action">http://172.27.48.250/Notification</entry>
-	<entry key="org.pabk.net.http.useProxy">true</entry>
-	<entry key="org.os.notification.wsdlURI">http://hubert.os.sk/fds_notification.asmx?wsdl</entry>
-	<entry key="org.os.checkRespons">true</entry>
-	<entry key="org.pabk.util.msgStore">C:/Program Files/PrepApp/scrap</entry>
-	<entry key="org.pabk.debug">true</entry>
+    <entry key="http.proxyHost">proxy.pabk.sk</entry>
+    <entry key="http.proxyPort">3128</entry>
+    <entry key="java.security.krb5.conf">C:\Program Files\PrepApp\conf\krb5.conf</entry>
+    <entry key="java.security.auth.login.config">C:\Program Files\PrepApp\conf\login.conf</entry>
+    <entry key="javax.security.auth.useSubjectCredsOnly">false</entry>
+    <entry key="org.pabk.net.http.defaultProtocol">HTTP</entry>
+    <entry key="org.pabk.net.http.defaultPort">80</entry>
+    <entry key="org.pabk.net.http.defaultFile">/</entry>
+    <entry key="org.pabk.util.haTable">C:\Program Files\PrepApp\conf\table.txt</entry>
+    <entry key="org.pabk.net.http.auth.user">9fFsCEH0AA==</entry>
+    <entry key="org.pabk.net.http.auth.password">8zu1w0iiHLH0AA==</entry>
+    <entry key="krb5.proxy.serviceName">HTTP/proxy.pabk.sk@PABK.SK</entry>
+    <entry key="javax.net.ssl.trustStore">C:\Program Files\PrepApp\certs\cacerts</entry>
+    <entry key="javax.net.ssl.trustStorePassword">C+R8vaj4w3vvM6Xxcuzn7x9A</entry>
+    <entry key="org.fds.XMLCheck">true</entry>
+    <entry key="org.fds.AuthSchemaLocation">http://p3600x006:8080/PrepApp/fds_conf/fds_soap.xsd</entry>
+    <entry key="org.fds.DobiSchemaLocation">http://p3600x006:8080/PrepApp/fds_conf/fds_soap_dobi.xsd</entry>
+    <entry key="org.os.notification.endpoint">http://hubert.os.sk/fds_notification.asmx</entry>
+    <entry key="org.os.notification.action">http://172.27.48.250/Notification</entry>
+    <entry key="org.pabk.net.http.useProxy">true</entry>
+    <entry key="org.os.notification.wsdlURI">http://hubert.os.sk/fds_notification.asmx?wsdl</entry>
+    <entry key="org.os.checkRespons">true</entry>
+    <entry key="org.pabk.util.msgStore">C:/Program Files/PrepApp/scrap</entry>
+    <entry key="org.pabk.debug">true</entry>
 </properties>
